# QCCE

./: CMakeLists.txt  README.md  main.c
include/: assert.h  bitboard.h  core.h  engine.h  error.h  evaluation.h  generation.h  interface.h  memory.h  move.h  piece.h  position.h  search.h  types.h
source/: assert.c  bitboard.c  core.c  error.c  generation.c  memory.c  move.c  piece.c  position.c
